--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@ body {
     background:#f1f1f1;
     color: #0f141e;
 }
+
 .a {
     color: #000;
     text-decoration: none;
@@ -97,14 +98,14 @@ a:visited {
     font-family: inherit;
     cursor: pointer;
     border-radius: 20px;
-    margin-left: 20px;
+    margin-left: 180px;
 }
 
 .btn:hover { 
     opacity: 0.8;
     transition: 300ms;
     background: green;
-    box-shadow: 4,4,12 black;
+    box-shadow: 4,4,12  rgba(0,0,0, .25);
 }
 
 .form h2{
@@ -127,6 +128,12 @@ a:visited {
     }
 }
 
+.inp {
+    border-style:ridge;
+    border-radius: 20px;
+    padding: 20px;
+}
+
 .form-group {
     margin-left: 20px;
 }
@@ -136,7 +143,16 @@ a:visited {
     width: 50%;
     /* width: calc(50% - 30px); */
 }
-
+#name {
+    border-style:ridge;
+    padding-left: 20px;
+    border-radius: 20px;
+}
+#email {
+    border-style:ridge;
+    padding-left: 20px;
+    border-radius: 20px;
+}
 .form-row .form-group:last-child {
     margin-right: 0;
 }
@@ -145,6 +161,7 @@ a:visited {
     display: block;
     font-size: 14px;
     color: #86898f;
+    padding-left: 20px;
 }
 
 .form-group input, textarea {
